--- a/terraform/basic_security_config/terraform.tfvars.example
+++ b/terraform/basic_security_config/terraform.tfvars.example
@@ -1,3 +1,76 @@
+/* Firewall Connectivity -------------------------------------------------- */
 fw_ip    = "10.60.0.100"
 username = "automation"
 password = "paloalto#1"
+
+/* Ethernet Interfaces ---------------------------------------------------- */
+
+# WAN interface
+eth1_name          = "ethernet1/1"
+eth1_mode          = "layer3"
+eth1_vsys          = "vsys1"
+eth1_dhcp          = true
+eth1_default_route = true
+
+# DMZ interface
+eth2_name = "ethernet1/2"
+eth2_mode = "layer3"
+eth2_vsys = "vsys1"
+eth2_ips  = ["192.168.1.1/24"]
+
+/* Virtual Routers -------------------------------------------------------- */
+vr_name = "default"
+
+/* Security Zones --------------------------------------------------------- */
+
+# WAN
+wan_zone_name = "WAN"
+wan_zone_mode = "layer3"
+
+# DMZ
+dmz_zone_name = "DMZ"
+dmz_zone_mode = "layer3"
+
+/* Service Objects -------------------------------------------------------- */
+
+# TCP port 22 to 221
+service_tcp_221_name             = "service-tcp-221"
+service_tcp_221_vsys             = "vsys1"
+service_tcp_221_protocol         = "tcp"
+service_tcp_221_description      = "Service object to map port 22 to 222"
+service_tcp_221_destination_port = "221"
+
+# TCP port 22 to 222
+service_tcp_222_name             = "service-tcp-222"
+service_tcp_222_vsys             = "vsys1"
+service_tcp_222_protocol         = "tcp"
+service_tcp_222_description      = "Service object to map port 22 to 222"
+service_tcp_222_destination_port = "222"
+
+# TCP port 80 to 81
+service_tcp_81_name             = "service-tcp-81"
+service_tcp_81_vsys             = "vsys1"
+service_tcp_81_protocol         = "tcp"
+service_tcp_81_description      = "Service object to map port 80 to 81"
+service_tcp_81_destination_port = "81"
+
+/* NAT Policies ----------------------------------------------------------- */
+
+# DMZ-WAN-out
+nat_dmz_wan_out_name     = "DMZ-WAN-out"
+nat_dmz_wan_out_audit    = "Initial config"
+nat_dmz_wan_out_src_addr = "any"
+nat_dmz_wan_out_dst_addr = "any"
+
+/* Security Policies ------------------------------------------------------ */
+
+# DMZ-to-WAN-allow
+policy_dmz_wan_out_name                  = "DMZ-to-WAN-allow"
+policy_dmz_wan_out_audit_comment         = "Initial config"
+policy_dmz_wan_out_source_addresses      = "any"
+policy_dmz_wan_out_source_users          = "any"
+policy_dmz_wan_out_destination_addresses = "any"
+policy_dmz_wan_out_applications          = "any"
+policy_dmz_wan_out_services              = "application-default"
+policy_dmz_wan_out_categories            = "any"
+policy_dmz_wan_out_action                = "allow"
